--- a/index.html
+++ b/index.html
@@ -757,13 +757,13 @@
                 </table>
             </div>
 
-            <div class="more-info-box">
+            <!-- <div class="more-info-box">
                 <i class="fa-solid fa-circle-info"></i>
                 <div class="more-info-box-content">
                     <p>The edge cases mentioned above are only for understanding the idea. More edge cases and system behavior details will be given on the day of the hackathon.</p>
                 </div>
             </div>
-        </div>
+        </div> -->
     </section>
 
     <section id="ps2" class="theme-edu">
@@ -864,14 +864,14 @@
                     </tbody>
                 </table>
             </div>
-
+<!-- 
             <div class="more-info-box">
                 <i class="fa-solid fa-circle-info"></i>
                 <div class="more-info-box-content">
                     <p>The edge cases mentioned above are only for understanding the idea. More edge cases and system behavior details will be given on the day of the hackathon.</p>
                 </div>
             </div>
-        </div>
+        </div> -->
     </section>
 
     <section id="ps3" class="theme-agri">
@@ -973,13 +973,13 @@
                 </table>
             </div>
 
-            <div class="more-info-box">
+            <!-- <div class="more-info-box">
                 <i class="fa-solid fa-circle-info"></i>
                 <div class="more-info-box-content">
                     <p>The edge cases mentioned above are only for understanding the idea. More edge cases and system behavior details will be given on the day of the hackathon.</p>
                 </div>
             </div>
-        </div>
+        </div> -->
     </section>
 
     <script>
